<resources>
    <string name="app_name">ZLiePie</string>
    <string name="keranjang_belanja">Keranjang Belanja</string>
    <string name="total">Total:</string>
    <string name="rp_0">Rp 0</string>
    <string name="lanjut_ke_pembayaran">Lanjut ke Pembayaran</string>
    <string name="pilih_pie_favoritmu">Pilih Pie Favoritmu</string>
    <string name="lihat_keranjang">Lihat Keranjang</string>
    <string name="logo">Logo</string>
    <string name="zliepie">ZLiePie</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="pembayaran">Pembayaran</string>
    <string name="metode_pembayaran">Metode Pembayaran</string>
    <string name="bayar_sekarang">Bayar Sekarang</string>
    <string name="hapus">Hapus</string>
    <string name="rp_25_000_x_1">Rp 25.000 x 1</string>
    <string name="login_untuk_melanjutkan">Login untuk melanjutkan</string>
    <string name="keranjang">Keranjang</string>
    <string name="katalog">Katalog</string>
    <string name="nama_produk">Nama Produk</string>
    <string name="ringkasan_pembayaran">Ringkasan Pembayaran</string>
    <string name="item_pesanan">Item Pesanan</string>
    <string name="memuat_pesanan">Memuat pesanan...</string>
    <string name="total_rp_0">Total: Rp 0</string>
    <string name="pilih_metode_pembayaran">Pilih Metode Pembayaran</string>
    <string name="transfer_bank">Transfer Bank</string>
    <string name="e_wallet_ovo_dana">E-Wallet (OVO/Dana)</string>
    <string name="cod_bayar_di_tempat">COD (Bayar di Tempat)</string>
    <string name="bayar_sekarang1">BAYAR SEKARANG</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="setting">Setting</string>
    <string name="tambah">tambah</string>
    <string name="kurangi">kurangi</string>
    <string name="login_zliepie">Login ZLiePie</string>
    <string name="login1">LOGIN</string>
    <string name="belum_punya_akun_daftar_sekarang">Belum punya akun? Daftar Sekarang</string>
    <string name="daftar_akun_zliepie">Daftar Akun ZLiePie</string>
    <string name="username_baru">Username Baru</string>
    <string name="password_baru">Password Baru</string>
    <string name="daftar">DAFTAR</string>
    <string name="sudah_punya_akun_login_di_sini">Sudah punya akun? Login di sini</string>
    <string name="classic_apple_pie">Classic Apple Pie</string>
    <string name="rp_25000_0">Rp 25000.0</string>
    <string name="tambah_ke_keranjang">TAMBAH KE KERANJANG</string>
</resources>